Set-up images folder and link between homepage and recipies

--- a/recipes/spinachLasagna.html
+++ b/recipes/spinachLasagna.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Spinach Lasagna</h1>
+    <img src="../images/spinachLasagna.webp" alt="An image depicting a dish of Spinach lasagna. Vegetarian recipe">
 </body>
 </html>
