Add links to unordered list to avoid having them in line in case of multiple links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/spinachLasagna.html">Spinach Lasagna</a>
+    <ul>
+        <li><a href="./recipes/spinachLasagna.html">Spinach Lasagna</a></li>
+    </ul>
+    
 </body>
 </html>
