--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/spinachLasagna.html">Spinach Lasagna</a></li>
+        <li><a href="./recipes/vegetarianSlider.html">Vegetarian Sliders</a></li>
     </ul>
     
 </body>
