Set-up garlicBroccoli.html recipe webpage
Add link to recipe in index.html
Add image, description, ingredients, directions

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="./recipes/spinachLasagna.html">Spinach Lasagna</a></li>
         <li><a href="./recipes/vegetarianSlider.html">Vegetarian Sliders</a></li>
+        <li><a href="./recipes/garlicBroccoli.html">Garlic Broccoli</a></li>
     </ul>
     
 </body>
