Add text-align to body for each recipe file

--- a/recipes/garlicBroccoli.html
+++ b/recipes/garlicBroccoli.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
 </head>
-<body>
+<body style="text-align: center;">
     <h1>Garlic Broccoli</h1>
     <img src="../images/garlicBroccoli.webp" alt="A picture depicting a garlic broccoli salad">
     <h2>Description</h2>
