--- a/recipes/spinachLasagna.html
+++ b/recipes/spinachLasagna.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
 </head>
-<body>
+<body style="text-align: center;">
     <h1>Spinach Lasagna</h1>
         <img src="../images/spinachLasagna.webp" alt="An image depicting a dish of Spinach lasagna. Vegetarian recipe">
     <h2>Description</h2>
