--- a/recipes/vegetarianSlider.html
+++ b/recipes/vegetarianSlider.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
 </head>
-<body>
+<body style="text-align: center;">
     <h1>Vegetarian Sliders</h1>
     <img src="../images/vegetarianSliders.webp" alt="A picture depicting a vegetarian slider sandwich">
     <h2>Description</h2>
