Add fixed 350px height to every image

--- a/recipes/garlicBroccoli.html
+++ b/recipes/garlicBroccoli.html
@@ -8,7 +8,7 @@
 </head>
 <body style="text-align: center;">
     <h1>Garlic Broccoli</h1>
-    <img src="../images/garlicBroccoli.webp" alt="A picture depicting a garlic broccoli salad">
+    <img style="height: 450px" src="../images/garlicBroccoli.webp" alt="A picture depicting a garlic broccoli salad">
     <h2>Description</h2>
     <p>This salad is made with marinated raw broccoli in a garlicky sauce for numnums! A recipe from my grandma. </p>
     <h3>Ingredients</h3>
