--- a/recipes/vegetarianSlider.html
+++ b/recipes/vegetarianSlider.html
@@ -8,7 +8,7 @@
 </head>
 <body style="text-align: center;">
     <h1>Vegetarian Sliders</h1>
-    <img src="../images/vegetarianSliders.webp" alt="A picture depicting a vegetarian slider sandwich">
+    <img style="height: 450px" src="../images/vegetarianSliders.webp" alt="A picture depicting a vegetarian slider sandwich">
     <h2>Description</h2>
     <p>These sliders are a quick and easy vegetarian appetizer or main dish. They are filled with gooey mozzarella cheese, tomatoes, basil, and garlic. </p>
     <h3>Ingredients</h3>
