--- a/recipes/spinachLasagna.html
+++ b/recipes/spinachLasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body style="text-align: center;">
     <h1>Spinach Lasagna</h1>
-        <img src="../images/spinachLasagna.webp" alt="An image depicting a dish of Spinach lasagna. Vegetarian recipe">
+        <img style="height: 450px" src="../images/spinachLasagna.webp" alt="An image depicting a dish of Spinach lasagna. Vegetarian recipe">
     <h2>Description</h2>
         <p>It's easy, it's cheesy, and it's vegetarian! </p>
     <h3>Ingredients</h3>
