Add 50% width on each <ol> and center them

--- a/recipes/vegetarianSlider.html
+++ b/recipes/vegetarianSlider.html
@@ -24,7 +24,7 @@
         <li>2 teaspoons Italian seasoning</li>
     </ul>
     <h3>Preparation Steps</h3>
-    <ol>
+    <ol style="width: 50%; margin: 0 auto;">
         <li>Preheat the oven to 375 degrees F (190 degrees C). Grease a 9x13-inch pan.</li>
         <li>Cut the rolls in half. Set the bottom halves into the bottom of the prepared pan and spread with marinara sauce. Place a layer of mozzarella cheese over the marinara and add a layer of tomatoes over the cheese. Spread basil over the tomatoes and add the top halves of the rolls.</li>
         <li>Combine melted butter, Parmesan cheese, garlic, and Italian seasoning in a bowl; stir to combine. Brush over the tops of the sliders.</li>
