--- a/recipes/garlicBroccoli.html
+++ b/recipes/garlicBroccoli.html
@@ -22,7 +22,7 @@
         <li><sup>1/2</sup>cup grated Parmesan cheese, or to tase</li>
     </ul>
     <h3>Preparation Steps</h3>
-    <ol>
+    <ol style="width: 50%; margin: 0 auto;">
         <li>Place garlic in a mortar dish or on a cutting board, and sprinkle with salt. Mash with a pestle, or use the flat side of a knife to mash garlic and salt into a paste. Transfer to a medium bowl, and stir in olive oil, vinegar, and mustard. Add the broccoli, and stir to coat. Chill for 3 hours to marinate, stirring occasionally. Sprinkle with Parmesan cheese before serving.</li>
     </ol>
 </body>
