--- a/recipes/spinachLasagna.html
+++ b/recipes/spinachLasagna.html
@@ -27,7 +27,7 @@
             <li><sup>1/4</sup> cup grated Parmesan cheese</li> 
         </ul>
     <h3>Preparation Steps</h3>
-        <ol>
+        <ol style="width: 50%; margin: 0 auto;">
             <li>Preheat oven to 400 degrees F (200 degrees C). Spray a 1 1/2-quart casserole dish with cooking spray.</li>
             <li>Bring a large pot of lightly salted water to a boil. Cook lasagna in the boiling water, stirring occasionally, until cooked through but firm to the bite, about 8 minutes. Drain.</li>
             <li>Place a steamer insert into a saucepan and fill with water to just below the bottom of the steamer. Bring water to a boil. Add spinach, cover, and steam until tender, 2 to 6 minutes. Drain spinach.</li>
