Create and link stylesheet file
Create folder for style sheets
Create style sheet file and link on every .html file
Add selectors for relevant elements
Import those selectors in the style sheet file
Add basic font and remove margin/padding on everything

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Home \\ Odin-recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/spinachLasagna.html">Spinach Lasagna</a></li>
-        <li><a href="./recipes/vegetarianSlider.html">Vegetarian Sliders</a></li>
-        <li><a href="./recipes/garlicBroccoli.html">Garlic Broccoli</a></li>
+    <h1 class="heading-primary">Odin Recipes</h1>
+    <ul class="list unord-list nav-list">
+        <li class="list-item unord-item"><a class="page-link list-link" href="./recipes/spinachLasagna.html">Spinach Lasagna</a></li>
+        <li class="list-item unord-item"><a class="page-link list-link" href="./recipes/vegetarianSlider.html">Vegetarian Sliders</a></li>
+        <li class="list-item unord-item"><a class="page-link list-link" href="./recipes/garlicBroccoli.html">Garlic Broccoli</a></li>
     </ul>
     
 </body>
