--- a/recipes/spinachLasagna.html
+++ b/recipes/spinachLasagna.html
@@ -4,36 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>Recipes</title>
 </head>
-<body style="text-align: center;">
-    <h1>Spinach Lasagna</h1>
-        <img style="height: 450px" src="../images/spinachLasagna.webp" alt="An image depicting a dish of Spinach lasagna. Vegetarian recipe">
-    <h2>Description</h2>
-        <p>It's easy, it's cheesy, and it's vegetarian! </p>
-    <h3>Ingredients</h3>
-        <ul>
-            <li>cooking spray</li> 
-            <li>9 lasagna noodles</li>
-            <li>1 bunch fresh spinach</li>
-            <li>1 (8 ounce) container ricotta cheese</li>
-            <li><sup>1/2</sup> cup shredded mozzarella cheese</li>
-            <li>1 egg, lightly beaten</li>
-            <li>1 pinch ground nutmeg</li>
-            <li>1 pinch dried basil</li>
-            <li>salt and ground black pepper to taste</li>
-            <li>1 cup pasta sauce</li>
-            <li><sup>1/2</sup> cup shredded mozzarella cheese</li>
-            <li><sup>1/4</sup> cup grated Parmesan cheese</li> 
+<body >
+    <h1 class="primary-heading">Spinach Lasagna</h1>
+        <img  src="../images/spinachLasagna.webp" alt="An image depicting a dish of Spinach lasagna. Vegetarian recipe">
+    <h2 class="secondary-heading">Description</h2>
+        <p class="description-text">It's easy, it's cheesy, and it's vegetarian! </p>
+    <h3 class="tertiary-heading">Ingredients</h3>
+        <ul class="list unord-list">
+            <li class="list-item unord-item">cooking spray</li> 
+            <li class="list-item unord-item">9 lasagna noodles</li>
+            <li class="list-item unord-item">1 bunch fresh spinach</li>
+            <li class="list-item unord-item">1 (8 ounce) container ricotta cheese</li>
+            <li class="list-item unord-item"><sup>1/2</sup> cup shredded mozzarella cheese</li>
+            <li class="list-item unord-item">1 egg, lightly beaten</li>
+            <li class="list-item unord-item">1 pinch ground nutmeg</li>
+            <li class="list-item unord-item">1 pinch dried basil</li>
+            <li class="list-item unord-item">salt and ground black pepper to taste</li>
+            <li class="list-item unord-item">1 cup pasta sauce</li>
+            <li class="list-item unord-item"><sup>1/2</sup> cup shredded mozzarella cheese</li>
+            <li class="list-item unord-item"><sup>1/4</sup> cup grated Parmesan cheese</li> 
         </ul>
-    <h3>Preparation Steps</h3>
-        <ol style="width: 50%; margin: 0 auto;">
-            <li>Preheat oven to 400 degrees F (200 degrees C). Spray a 1 1/2-quart casserole dish with cooking spray.</li>
-            <li>Bring a large pot of lightly salted water to a boil. Cook lasagna in the boiling water, stirring occasionally, until cooked through but firm to the bite, about 8 minutes. Drain.</li>
-            <li>Place a steamer insert into a saucepan and fill with water to just below the bottom of the steamer. Bring water to a boil. Add spinach, cover, and steam until tender, 2 to 6 minutes. Drain spinach.</li>
-            <li>Mix spinach, ricotta cheese, 1/2 cup mozzarella cheese, egg, nutmeg, basil, salt, and black pepper in a bowl until thoroughly combined.</li>
-            <li>Spread 1/4 cup pasta sauce on the bottom of the prepared casserole dish; top with 3 lasagna noodles, 1/2 of the ricotta mixture, and 1/4 cup pasta sauce. Repeat layers of 3 more noodles, 1/2 cup ricotta mixture, and 1/4 cup pasta sauce. End with remaining 3 lasagna noodles and 1/4 cup pasta sauce. Sprinkle 1/2 cup mozzarella cheese and Parmesan cheese on top. Cover casserole with aluminum foil.</li>
-            <li>Bake in the preheated oven for 25 minutes. Uncover casserole and continue baking until lasagna is bubbling and lightly browned, about 25 more minutes. Let lasagna stand 5 minutes before serving.</li>
+    <h3 class="tertiary-heading">Preparation Steps</h3>
+        <ol class="list ord-list">
+            <li class="list-item ord-item">Preheat oven to 400 degrees F (200 degrees C). Spray a 1 1/2-quart casserole dish with cooking spray.</li>
+            <li class="list-item ord-item">Bring a large pot of lightly salted water to a boil. Cook lasagna in the boiling water, stirring occasionally, until cooked through but firm to the bite, about 8 minutes. Drain.</li>
+            <li class="list-item ord-item">Place a steamer insert into a saucepan and fill with water to just below the bottom of the steamer. Bring water to a boil. Add spinach, cover, and steam until tender, 2 to 6 minutes. Drain spinach.</li>
+            <li class="list-item ord-item">Mix spinach, ricotta cheese, 1/2 cup mozzarella cheese, egg, nutmeg, basil, salt, and black pepper in a bowl until thoroughly combined.</li>
+            <li class="list-item ord-item">Spread 1/4 cup pasta sauce on the bottom of the prepared casserole dish; top with 3 lasagna noodles, 1/2 of the ricotta mixture, and 1/4 cup pasta sauce. Repeat layers of 3 more noodles, 1/2 cup ricotta mixture, and 1/4 cup pasta sauce. End with remaining 3 lasagna noodles and 1/4 cup pasta sauce. Sprinkle 1/2 cup mozzarella cheese and Parmesan cheese on top. Cover casserole with aluminum foil.</li>
+            <li class="list-item ord-item">Bake in the preheated oven for 25 minutes. Uncover casserole and continue baking until lasagna is bubbling and lightly browned, about 25 more minutes. Let lasagna stand 5 minutes before serving.</li>
         </ol>
 </body>
 </html>
