--- a/recipes/garlicBroccoli.html
+++ b/recipes/garlicBroccoli.html
@@ -4,26 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>Recipes</title>
 </head>
-<body style="text-align: center;">
-    <h1>Garlic Broccoli</h1>
-    <img style="height: 450px" src="../images/garlicBroccoli.webp" alt="A picture depicting a garlic broccoli salad">
-    <h2>Description</h2>
-    <p>This salad is made with marinated raw broccoli in a garlicky sauce for numnums! A recipe from my grandma. </p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>4 cloves garlic, peeled</li>
-        <li>1<sup>1/2</sup>teaspoons salt</li>
-        <li>1 bunch broccoli, cut into florets</li>
-        <li><sup>1/3</sup>cup olive oil</li>
-        <li><sup>1/4</sup>cup red wine vinegar</li>
-        <li>1 tablespoon Dijon mustard</li>
-        <li><sup>1/2</sup>cup grated Parmesan cheese, or to tase</li>
+<body >
+    <h1 class="primary-heading">Garlic Broccoli</h1>
+    <img  src="../images/garlicBroccoli.webp" alt="A picture depicting a garlic broccoli salad">
+    <h2 class="secondary-heading">Description</h2>
+    <p class="description-text">This salad is made with marinated raw broccoli in a garlicky sauce for numnums! A recipe from my grandma. </p>
+    <h3 class="tertiary-heading">Ingredients</h3>
+    <ul class="list unord-list">
+        <li class="list-item unord-item">4 cloves garlic, peeled</li>
+        <li class="list-item unord-item">1<sup>1/2</sup>teaspoons salt</li>
+        <li class="list-item unord-item">1 bunch broccoli, cut into florets</li>
+        <li class="list-item unord-item"><sup>1/3</sup>cup olive oil</li>
+        <li class="list-item unord-item"><sup>1/4</sup>cup red wine vinegar</li>
+        <li class="list-item unord-item">1 tablespoon Dijon mustard</li>
+        <li class="list-item unord-item"><sup>1/2</sup>cup grated Parmesan cheese, or to tase</li>
     </ul>
-    <h3>Preparation Steps</h3>
-    <ol style="width: 50%; margin: 0 auto;">
-        <li>Place garlic in a mortar dish or on a cutting board, and sprinkle with salt. Mash with a pestle, or use the flat side of a knife to mash garlic and salt into a paste. Transfer to a medium bowl, and stir in olive oil, vinegar, and mustard. Add the broccoli, and stir to coat. Chill for 3 hours to marinate, stirring occasionally. Sprinkle with Parmesan cheese before serving.</li>
+    <h3 class="tertiary-heading">Preparation Steps</h3>
+    <ol class="list ord-list">
+        <li class="list-item ord-item">Place garlic in a mortar dish or on a cutting board, and sprinkle with salt. Mash with a pestle, or use the flat side of a knife to mash garlic and salt into a paste. Transfer to a medium bowl, and stir in olive oil, vinegar, and mustard. Add the broccoli, and stir to coat. Chill for 3 hours to marinate, stirring occasionally. Sprinkle with Parmesan cheese before serving.</li>
     </ol>
 </body>
 </html>
