--- a/recipes/vegetarianSlider.html
+++ b/recipes/vegetarianSlider.html
@@ -4,31 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/style.css">
     <title>Recipes</title>
 </head>
-<body style="text-align: center;">
-    <h1>Vegetarian Sliders</h1>
-    <img style="height: 450px" src="../images/vegetarianSliders.webp" alt="A picture depicting a vegetarian slider sandwich">
-    <h2>Description</h2>
-    <p>These sliders are a quick and easy vegetarian appetizer or main dish. They are filled with gooey mozzarella cheese, tomatoes, basil, and garlic. </p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>1 (12 count) package Hawaiian bread rolls (such as King's®) </li>
-        <li><sup>1/2</sup>cup marinara sauce</li>
-        <li>8 ounces grated mozzarella cheese</li>
-        <li>3 Roma tomatoes, sliced</li>
-        <li><sup>1/4</sup>cup chopped fresh basil</li>
-        <li><sup>1/4</sup>cup butter, melted</li>
-        <li>2 tablespoons grated Parmesan cheese</li>
-        <li>2 cloves roasted garlic, finely minced</li>
-        <li>2 teaspoons Italian seasoning</li>
+<body >
+    <h1 class="primary-heading">Vegetarian Sliders</h1>
+    <img  src="../images/vegetarianSliders.webp" alt="A picture depicting a vegetarian slider sandwich">
+    <h2 class="secondary-heading">Description</h2>
+    <p class="description-text">These sliders are a quick and easy vegetarian appetizer or main dish. They are filled with gooey mozzarella cheese, tomatoes, basil, and garlic. </p>
+    <h3 class="tertiary-heading">Ingredients</h3>
+    <ul class="list unord-list">
+        <li class="list-item unord-item">1 (12 count) package Hawaiian bread rolls (such as King's®) </li>
+        <li class="list-item unord-item"><sup>1/2</sup>cup marinara sauce</li>
+        <li class="list-item unord-item">8 ounces grated mozzarella cheese</li>
+        <li class="list-item unord-item">3 Roma tomatoes, sliced</li>
+        <li class="list-item unord-item"><sup>1/4</sup>cup chopped fresh basil</li>
+        <li class="list-item unord-item"><sup>1/4</sup>cup butter, melted</li>
+        <li class="list-item unord-item">2 tablespoons grated Parmesan cheese</li>
+        <li class="list-item unord-item">2 cloves roasted garlic, finely minced</li>
+        <li class="list-item unord-item">2 teaspoons Italian seasoning</li>
     </ul>
-    <h3>Preparation Steps</h3>
-    <ol style="width: 50%; margin: 0 auto;">
-        <li>Preheat the oven to 375 degrees F (190 degrees C). Grease a 9x13-inch pan.</li>
-        <li>Cut the rolls in half. Set the bottom halves into the bottom of the prepared pan and spread with marinara sauce. Place a layer of mozzarella cheese over the marinara and add a layer of tomatoes over the cheese. Spread basil over the tomatoes and add the top halves of the rolls.</li>
-        <li>Combine melted butter, Parmesan cheese, garlic, and Italian seasoning in a bowl; stir to combine. Brush over the tops of the sliders.</li>
-        <li>Bake in the preheated oven until the insides are gooey and the tops are golden brown, 10 to 15 minutes.</li>
+    <h3 class="tertiary-heading">Preparation Steps</h3>
+    <ol class="list ord-list">
+        <li class="list-item ord-item">Preheat the oven to 375 degrees F (190 degrees C). Grease a 9x13-inch pan.</li>
+        <li class="list-item ord-item">Cut the rolls in half. Set the bottom halves into the bottom of the prepared pan and spread with marinara sauce. Place a layer of mozzarella cheese over the marinara and add a layer of tomatoes over the cheese. Spread basil over the tomatoes and add the top halves of the rolls.</li>
+        <li class="list-item ord-item">Combine melted butter, Parmesan cheese, garlic, and Italian seasoning in a bowl; stir to combine. Brush over the tops of the sliders.</li>
+        <li class="list-item ord-item">Bake in the preheated oven until the insides are gooey and the tops are golden brown, 10 to 15 minutes.</li>
     </ol>
 </body>
 </html>
