Class changes and home page style
Repair class names and css selection of those classes
Add container for the image in order to center it
Finish styles for home page

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Home \\ Odin-recipes</title>
 </head>
 <body>
-    <h1 class="heading-primary">Odin Recipes</h1>
+    <h1 class="primary-heading">Odin Recipes</h1>
     <ul class="list unord-list nav-list">
-        <li class="list-item unord-item"><a class="page-link list-link" href="./recipes/spinachLasagna.html">Spinach Lasagna</a></li>
-        <li class="list-item unord-item"><a class="page-link list-link" href="./recipes/vegetarianSlider.html">Vegetarian Sliders</a></li>
-        <li class="list-item unord-item"><a class="page-link list-link" href="./recipes/garlicBroccoli.html">Garlic Broccoli</a></li>
+        <li class="page-link list-item unord-item"><a class="list-link" href="./recipes/spinachLasagna.html">Spinach Lasagna</a></li>
+        <li class="page-link list-item unord-item"><a class="list-link" href="./recipes/vegetarianSlider.html">Vegetarian Sliders</a></li>
+        <li class="page-link list-item unord-item"><a class="list-link" href="./recipes/garlicBroccoli.html">Garlic Broccoli</a></li>
     </ul>
     
 </body>
