--- a/recipes/garlicBroccoli.html
+++ b/recipes/garlicBroccoli.html
@@ -9,7 +9,9 @@
 </head>
 <body >
     <h1 class="primary-heading">Garlic Broccoli</h1>
+    <div class="img-container">
     <img  src="../images/garlicBroccoli.webp" alt="A picture depicting a garlic broccoli salad">
+</div>
     <h2 class="secondary-heading">Description</h2>
     <p class="description-text">This salad is made with marinated raw broccoli in a garlicky sauce for numnums! A recipe from my grandma. </p>
     <h3 class="tertiary-heading">Ingredients</h3>
