--- a/recipes/spinachLasagna.html
+++ b/recipes/spinachLasagna.html
@@ -9,7 +9,9 @@
 </head>
 <body >
     <h1 class="primary-heading">Spinach Lasagna</h1>
+    <div class="img-container">
         <img  src="../images/spinachLasagna.webp" alt="An image depicting a dish of Spinach lasagna. Vegetarian recipe">
+    </div>
     <h2 class="secondary-heading">Description</h2>
         <p class="description-text">It's easy, it's cheesy, and it's vegetarian! </p>
     <h3 class="tertiary-heading">Ingredients</h3>
