--- a/recipes/vegetarianSlider.html
+++ b/recipes/vegetarianSlider.html
@@ -9,7 +9,9 @@
 </head>
 <body >
     <h1 class="primary-heading">Vegetarian Sliders</h1>
+    <div class="img-container">
     <img  src="../images/vegetarianSliders.webp" alt="A picture depicting a vegetarian slider sandwich">
+</div>
     <h2 class="secondary-heading">Description</h2>
     <p class="description-text">These sliders are a quick and easy vegetarian appetizer or main dish. They are filled with gooey mozzarella cheese, tomatoes, basil, and garlic. </p>
     <h3 class="tertiary-heading">Ingredients</h3>
