Finish styling the other .html pages
Add margins and alignments
Add color and background-color
Change font size and font weight where proper
Group classes to reduce code written

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <h1 class="primary-heading">Odin Recipes</h1>
-    <ul class="list unord-list nav-list">
-        <li class="page-link list-item unord-item"><a class="list-link" href="./recipes/spinachLasagna.html">Spinach Lasagna</a></li>
-        <li class="page-link list-item unord-item"><a class="list-link" href="./recipes/vegetarianSlider.html">Vegetarian Sliders</a></li>
-        <li class="page-link list-item unord-item"><a class="list-link" href="./recipes/garlicBroccoli.html">Garlic Broccoli</a></li>
+    <ul class="nav-list">
+        <li class="page-link"><a class="list-link" href="./recipes/spinachLasagna.html">Spinach Lasagna</a></li>
+        <li class="page-link"><a class="list-link" href="./recipes/vegetarianSlider.html">Vegetarian Sliders</a></li>
+        <li class="page-link"><a class="list-link" href="./recipes/garlicBroccoli.html">Garlic Broccoli</a></li>
     </ul>
     
 </body>
